# HollowEngine

./: README.md
HollowEngine/: CMakeLists.txt  desktop.ini  main.cpp
HollowEngine/Core/: Actor.cpp  Actor.h  BasicPlane.cpp  BasicPlane.h  Box.cpp  Box.h  Camera.cpp  Camera.h  DrawObjects.h  Model.h  Setup.h  Shaders.cpp  Shaders.h  render.h
HollowEngine/Scene/: Window.cpp  Window.h
HollowEngine/Shaders/: Shader.fs  Shader.vs
